fix: resolve SonarCloud findings - SSRF protection, duplicate literals, deprecated APIs, and test quality
- S5144: Add SSRF protection via DNS resolution check blocking internal network URLs
- S1874: Replace deprecated URL constructor with URI.create().toURL()
- S1192: Extract duplicate '/uploads/' to UPLOADS_PATH_PREFIX constant in ProductService and FileStorageService
- S1192: Extract duplicate 'User not found' to USER_NOT_FOUND constant in ReviewController
- S1130: Remove unnecessary throws Exception from TestSecurityConfig and AuthControllerTest
- S5853: Chain assertions in FileStorageServiceTest
- S5858: Use hasParentRaw() instead of getParent()/isEqualTo()
- Add file.allow-internal-urls config for test bypass of SSRF check